# bridgl

./: .gitmodules  README.md
contracts/: foundry.toml
contracts/evm/: foundry.toml  package-lock.json  package.json
contracts/src/: Bridgl.sol  IBridgl.sol
contracts/svm/: Anchor.toml  ccip-idl.json  package-lock.json
contracts/svm/programs/bridgl/: Cargo.toml
contracts/svm/programs/bridgl/src/: constants.rs  error.rs  lib.rs
contracts/svm/programs/bridgl/src/instructions/: ccip_receive.rs  initialize.rs  initialize_controller.rs  initialize_wrapper.rs  mod.rs  unwrap.rs  wrap.rs
contracts/svm/programs/bridgl/src/state/: any_2_svm_message.rs  controller.rs  mod.rs  svm_2_any_message.rs  svm_token_amount.rs  unwrap_params.rs  wrap_params.rs
frontend/: env.d.ts  package-lock.json  package.json  tsconfig.json
frontend/abi/: AccessControl.ts  Address.ts  Bridgl.ts  BridglWrapper.ts  BurnMintERC677.ts  BurnMintERC677Helper.ts  CCIPLocalSimulator.ts  CCIPReceiver.ts  CallWithExactGas.ts  Client.ts  ConfirmedOwner.ts  ConfirmedOwnerWithProposal.ts  ERC165Checker.ts  ERC20Burnable.ts  ERC677.ts  EnumerableSet.ts  IAccessControl.ts  IAny2EVMMessageReceiver.ts  IBridgl.ts  IBridglWrapper.ts  IBurnMintERC20.ts  IERC677.ts  IERC677Receiver.ts  IGetCCIPAdmin.ts  IOwnable.ts  IOwner.ts  IRouter.ts  IRouterClient.ts  Internal.ts  LinkToken.ts  MerkleMultiProof.ts  MockCCIPRouter.ts  OwnerIsCreator.ts  Vm.ts  VmSafe.ts  WETH9.ts  WrapTest.ts  index.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: crypto-provider.tsx
frontend/lib/: bridgl.ts  ccip.ts  (+2 more)
(+45 files in other folders)
